--- a/Capfile.example
+++ b/Capfile.example
@@ -1,47 +1,22 @@
+# ratchetify recipes
+require 'ratchetify'
 
-#
-# common recipies
-#
-require 'uberspacify/setup'
-require 'uberspacify/service'
-require 'uberspacify/rake'
-require 'uberspacify/git'
-require 'uberspacify/bundle'
+# the application's name
+set :application, 'yourapp'
+set :host, 'www'
+set :domain, 'yourapp.com'
 
-#
-# ruby version: 1.9.3, 2.0.0
-#
-set :ruby_version, '2.0.0'
+# SSH user/password
+set :user, 'uberspace_user' 
+set :password, 'uberspace_user_password'
 
-#
-# SSH uberspace user/password
-#
-set :user, 'uberspace_ssh_user' 
-set :password, 'uberspace_ssh_user_password'
+role :web, "some_server.uberspace.de" # Your HTTP server, Apache/etc
+role :db,  "some_server.uberspace.de"
 
-set :application, 'name_of_the_rails_app'  # has to match the name of the repo in e.g github
-set :application_home, 'html'
-
-# name of the thin run script
-set :daemon_service, 'runthin'
-
- # select a high random port number
-set :daemon_port, 45532
-
-# github or bitbucket settings
-set :repository,  "https://your_name@github.com/your_name/name_of_the_rails_app.git"
-set :scm_password, 'git_pass_word_on_github'
+set :repo,  "https://github.com/you/yourapp.git"
+set :repo_password, 'your_github_password'
 set :branch, 'master'
 
-#
-# uberspace server
-#
-role :web, "name_of_the_uberspace_server.uberspace.de"
-role :db,  "name_of_the_uberspace_server.uberspace.de"
+set :daemon_port, 76543 # a random port. Make sure no one else uses it
 
-#
-# do not change unless you know what you're doing ...
-#
-set :environment, 'production'
-
-default_run_options[:pty] = true
+# there are a couple more attributes, but normally you don't need to change them. See lib/ratchetify.rb and lib/ratchetify/base.rb for details.
